@@ -1,6 +1,6 @@
 Package: fastbeta
 Version: 0.3.1
-Date: 2024-05-30
+Date: 2024-06-17
 Title:
 	Fast Approximation of Time-Varying Infectious Disease Transmission Rates
 Description:
